[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cxoneflow_kickoff_api"
dynamic = ["version"]
dependencies = [
    "requests==2.32.3",
    "PyJWT==2.10.1",
    "dataclasses-json==0.6.7",
    "cryptography==44.0.1",
    "cxone-api@https://github.com/checkmarx-ts/cxone-async-api/releases/download/1.0.5/cxone_api-1.0.5-py3-none-any.whl"
]
description = "CxOneFlow Kickoff API"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"cxoneflow_kickoff_api" = "cxoneflow_kickoff_api"}

[tool.setuptools.dynamic]
version = { attr = "cxoneflow_kickoff_api.__version__.__version__" }
